# clip-music

./: CMakeLists.txt  Clip.cpp  Clip.h  LiveMax.cbp  LiveMax.depend  LiveMax.layout  Macros.h  Music.h  README.md  Ticks.cpp  Ticks.h  Types.cpp  helper_functions.cpp  helper_functions.h  main.cpp
Others/: AssumptionsQuestions.txt  assumption_1_code.txt  versions.txt
src/: Clip.cpp  Clip.h  Music.cpp  Music.h  Types.cpp  Types.h  helper_functions.cpp  helper_functions.h  main.cpp
tst/: CMakeLists.txt  Clips_tst.cpp  Music_tst.cpp  helper_functions_tst.cpp
